Dad's Art Catalog/force-app/main/default/objects/Art__c/Art__c.object-meta.xml
<CustomObject>
    <label>Art</label>
    <nameField>
        <label>Art Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Art</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>