Dad's Art Catalog/force-app/main/default/objects/Art__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>