Dad's Art Catalog/force-app/main/default/objects/Art__c/fields/Backup_Image_File_Location__c.field-meta.xml
<CustomField>
    <fullName>Backup_Image_File_Location__c</fullName>
    <description>Describes what storage device the file is backed up on</description>
    <label>Backup Image File Location</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>