Dad's Art Catalog/force-app/main/default/objects/Art__c/fields/Backup_Image_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Backup_Image_File_Path__c</fullName>
    <description>The specific file path to the backup image</description>
    <label>Backup Image File Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>