Dad's Art Catalog/force-app/main/default/objects/Art__c/fields/Imugr_Link__c.field-meta.xml
<CustomField>
    <fullName>Imugr_Link__c</fullName>
    <label>Imugr Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>