Dad's Art Catalog/force-app/main/default/objects/Art__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where the art is</description>
    <label>Location</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>